[tool.poetry]
name = "gsn"
version = "0.1.0"
description = "praca dyplomowa"
authors = ["Patryk Drobiński, Paweł Maćkowski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
torchvision = "^0.17.2"
scikit-image = "^0.22.0"
fiona = "^1.9.6"
shapely = "^2.0.3"
geojson = "^3.1.0"
utm = "^0.7.0"
osmnx = "^1.9.1"
statsmodels = "^0.14.1"
geopandas = "^0.14.3"
jupyter = "^1.0.0"
plotly = "^5.20.0"
matplotlib = "^3.8.3"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
